# binary-arrow

./: .gitignore  binary-arrow.cabal
Data/Binary/Get/: Arrow.hs
Data/Binary/Get/Arrow/: Combinator.hs  Compat.hs  Core.hs  Decoder.hs  VarSize.hs  Vector.hs
benchmarks/: Bench.hs  Decoder.hs
