name:                binary-arrow
version:             0.1.0.0
synopsis:            Binary decoder using arrows.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Lennart Kolmodin
maintainer:          kolmodin@gmail.com
copyright:           2013 Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.8

flag compat
  Description: Work with binary >= 0.6

library
  extensions:
    Arrows,
    TupleSections,
    BangPatterns

  exposed-modules:
    Data.Binary.Get.Arrow

  other-modules:
    Data.Binary.Get.Arrow.Core,
    Data.Binary.Get.Arrow.VarSize,
    Data.Binary.Get.Arrow.Decoder,
    Data.Binary.Get.Arrow.Combinator,
    Data.Binary.Get.Arrow.Vector

  build-depends:
    base ==4.6.*,
    bytestring >= 0.10,
    vector >= 0.10

  if flag(compat)
    build-depends:
      binary >= 0.6.4.0
    other-modules:
      Data.Binary.Get.Arrow.Compat
    cpp-options: -DBINARY_COMPAT

  ghc-options: -O2 -Wall

  if arch(i386) || arch(x86_64)
    cpp-options: -DFAST_LITTLE_ENDIAN=1

benchmark bench
  type:       exitcode-stdio-1.0
  main-is:    Bench.hs
  hs-source-dirs:  benchmarks
  other-modules: Decoder

  build-depends:
    base == 4.6.*,
    binary,
    deepseq,
    criterion,
    binary-arrow,
    bytestring

  ghc-options: -O2 -Wall -rtsopts